[package]
name = "sampled-event-handler"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
license = "MIT"

[dependencies]
codegenerator = { path = "../codegenerator" }
seqc-tracker = { path = "../seqc-tracker" }

anyhow = { workspace = true }
indexmap = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
