[package]
name = "seqc-tracker"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
license = "MIT"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
indexmap = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }

codegenerator = { path = "../codegenerator" }
