[package]
name = "utils"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]

[dev-dependencies]
criterion = { workspace = true }
indexmap = { workspace = true }


[[bench]]
name = "vec_map_bench"
harness = false

[lints]
workspace = true
